fixed modal z-index

--- a/style.css
+++ b/style.css
@@ -418,7 +418,8 @@ svg {
 
 .modal {
   position: fixed;
-  z-index: 800;
+  /* z-index: 800; */
+  z-index: 999;
   top: 0;
   right: 0;
   bottom: 0;
